[STORM-3895] Move introspection arguments to individual poms and make specific overrides based on JDK.